--- a/postcss/blocks/main-menu.css
+++ b/postcss/blocks/main-menu.css
@@ -25,17 +25,15 @@
   text-transform: uppercase;
 }
 
-.main-menu__item a[href] {
-  &:hover,
-  &:focus {
-    color: $color-hover;
-    background-color: color($bg-menu-active a(50%));;
-  }
+.main-menu__item a[href]:hover,
+.main-menu__item a[href]:focus {
+  color: $color-hover;
+  background-color: color($bg-menu-active a(50%));
+}
 
-  &:active {
-    color: $bg-menu-active;
-    background-color: $color-active;
-  }
+.main-menu__item a[href]:active {
+  color: $bg-menu-active;
+  background-color: $color-active;
 }
 
 @media ($tablet-widths) {
