--- a/postcss/blocks/page-main.css
+++ b/postcss/blocks/page-main.css
@@ -7,6 +7,22 @@
   @mixin container;
 }
 
+@media ($mobail-large-widths) {
+
+  .page-main__inner {
+    @mixin container 440px;
+  }
+
+}
+
+@media ($tablet-widths) {
+
+  .page-main__inner {
+    @mixin container 708px;
+  }
+
+}
+
 @media ($desktop-widths) {
 
   .page-main {
@@ -18,5 +34,6 @@
     width: 640px;
     padding: 0 45px 0 30px;
   }
+
 }
 
