--- a/postcss/blocks/btn.css
+++ b/postcss/blocks/btn.css
@@ -6,6 +6,7 @@
   font-family: "Open Sans", "Arial", sans-serif;
   @mixin font-style 14px, 18px, 700;
   color: $bg-color;
+  background-color: transparent;
   background-image: linear-gradient(to bottom, #a2c500 50%, #86b600);
   border: none;
   border-radius: 3px;
@@ -13,7 +14,7 @@
 
   &:hover,
   &:focus {
-    background-image: linear-gradient(to bottom, #ffffff 50%, #a2c500 55%, #86b600 65%, #ffffff 70%);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 50%, #a2c500 55%, #86b600 65%, rgba(255, 255, 255, 0) 70%);
   }
 
   &:active {
