--- a/postcss/blocks/data-card.css
+++ b/postcss/blocks/data-card.css
@@ -36,7 +36,9 @@
   padding-right: 25px;
 }
 
-.data-card__number input {
+/*==== DATA-CARD__NUMBER ====*/
+
+.data-card__number-field {
   width: 23%;
   margin-right: auto;
   padding: 7px;
@@ -48,16 +50,20 @@
     margin-right: 0;
   }
 
-  &:hover {
-    border-color: $item-color;
+  &:hover,
+  &:focus {
+    border-color: #e4e9ee;
+    box-shadow: 0px 0px 3px $item-color;
   }
 }
+
+/*==== DATA-CARD__VALIDITY ====*/
 
 .data-card__validity label {
   @mixin visually-hidden;
 }
 
-.data-card__validity select {
+.data-card__select {
   width: 25%;
   margin-right: 10px;
   padding: 7px;
@@ -70,29 +76,41 @@
     margin-right: 0;
   }
 
-  &:hover {
-    border-color: $item-color;
+  &:hover,
+  &:focus {
+    border-color: #e4e9ee;
+    box-shadow: 0px 0px 3px $item-color;
   }
 }
+
+.data-card__select-item--hidden {
+  display: none;
+  }
+
+/*==== DATA-CARD__NAME ====*/
 
 .data-card__name legend {
   @mixin visually-hidden;
 }
 
-.data-card__name input {
+.data-card__name-field {
   width: 100%;
   padding: 7px;
   @mixin font-style 14px, 120%;
   border: $input-border;
 
-  &:hover {
-    border-color: $item-color;
+  &:hover,
+  &:focus {
+    border-color: #e4e9ee;
+    box-shadow: 0px 0px 3px $item-color;
   }
 
   &::placeholder {
     color: #bec6cf;
   }
 }
+
+/*==== DATA-CARD__CVV ====*/
 
 .data-card__cvv {
   width: 100%;
@@ -111,7 +129,7 @@
 
 .data-card__cvv legend {
   padding-top: 60px;
-  text-align: right;
+  margin-left: 131px;
 }
 
 .data-card__side-inner {
@@ -144,16 +162,25 @@
   @mixin visually-hidden;
 }
 
-.data-card__cvv input {
+.data-card__cvv-field {
   width: 46%;
   padding: 7px;
   @mixin font-style 14px, 120%;
   text-align: center;
   border: $input-border;
 
-  &:hover {
-    border-color: $item-color;
+  &:hover,
+  &:focus {
+    border-color: #e4e9ee;
+    box-shadow: 0px 0px 3px $item-color;
   }
+
+}
+
+.data-card__invalid {
+  border-color: red;
+  outline: none;
+  box-shadow: none;
 }
 
 
@@ -200,21 +227,22 @@
     @mixin font-style;
   }
 
-  .data-card__side-inner {
-
-    &--back {
+  .data-card__side-inner--back {
     padding-bottom: 75px;
-    }
+  }
 
-    &--icon::before {
-      top: 115px;
-      width: 25px;
-      height: 25px;
-    }
+  .data-card__side-inner--icon::before {
+    top: 115px;
+    width: 25px;
+    height: 25px;
   }
 
   .data-card__cvv::before {
     height: 43px;
+  }
+
+  .data-card__cvv legend {
+    margin-left: 170px;
   }
 
 }
