--- a/postcss/blocks/flex-conteiner.css
+++ b/postcss/blocks/flex-conteiner.css
@@ -1,10 +1,10 @@
- @media ($desktop-widths) {
+@media ($desktop-widths) {
 
   .flex-conteiner {
     display: flex;
-    @mixin container;
+    @mixin container 960px;
     margin: 0 auto;
     flex-shrink: 0;
   }
 
- }
+}
