--- a/postcss/global/scaffolding.css
+++ b/postcss/global/scaffolding.css
@@ -8,7 +8,7 @@ html {
 
 body {
   min-width: 320px;
-  margin: 0;
+  margin: 0 auto;
   font-family: "Arial", "Helvetica", sans-serif;
   @mixin font-style;
   background: $body-bg;
