--- a/postcss/mixins.css
+++ b/postcss/mixins.css
@@ -4,26 +4,9 @@
   font-weight: $font-weight;
 }
 
-@define-mixin container $width: 320px, $padding: 0 20px, $margin: 0 auto {
+@define-mixin container $width: 280px, $margin: 0 auto {
   width: $width;
-  padding: $padding;
   margin: $margin;
-
-  @media ($mobail-large-widths) {
-    width: 480px;
-    padding: 0 20px;
-    margin: 0 auto;
-  }
-
-  @media ($tablet-widths) {
-    width: 768px;
-    padding: 0 40px;
-  }
-
-  @media ($desktop-widths) {
-    width: 1000px;
-    padding: 0 20px;
-  }
 }
 
 
